--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.flyway.user=granfox
+spring.flyway.password=granfox
+spring.flyway.baseline-on-migrate=true
+spring.flyway.schemas=public
+spring.flyway.locations=classpath:db/migration
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=granfox
+spring.datasource.password=granfox
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://localhost:5432/granfox?stringtype=unspecified
+spring.flyway.url=jdbc:postgresql://localhost:5432/granfox
+spring.jpa.properties.hibernate.show_sql=true
+
+server.port=8100
